--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,29 @@
-/* style.css */
 
-/* Resetting default margin and padding */
-body, h1, h2, h3, p, ul, li, figure {
+body, h1, h2, h3, p {
     margin: 0;
     padding: 0;
 }
 
-/* Setting up basic styles */
+
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
-    background-color: #050505; /* Dark gray */
-    color: #fff; /* White */
+    background-color: #050505; 
+    color: #fff; 
     margin: 0;
     padding: 0;
     display: grid;
-    grid-template-rows: auto 1fr auto; /* Header, Main Content, Footer */
+    grid-template-rows: auto 1fr auto; 
     min-height: 100vh;
 }
 
-/* Header styles */
+
 header {
-    background-color: #333; /* Dark gray */
-    color: #ffd700; /* Gold */
+    background-color: #333; 
+    color: #ffd700; 
     padding: 20px;
     text-align: center;
+    position: relative;
 }
 
 header h1 {
@@ -42,7 +41,7 @@ nav ul li {
 }
 
 nav ul li a {
-    color: #ffd700; /* Gold */
+    color: #ffd700; 
     text-decoration: none;
     padding: 5px 10px;
     border-radius: 5px;
@@ -50,54 +49,61 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    background-color: hsl(0, 0%, 5%); /* Dark gray */
+    background-color: hsl(0, 0%, 5%); 
 }
 
-/* Main content styles */
+
 main {
     display: grid;
-    grid-template-columns: 1fr; /* Single column */
-    grid-template-rows: auto 1fr auto; /* Header, Main Content, Footer */
+    grid-template-columns: 1fr;
+    grid-template-rows: auto 1fr auto; 
 }
 
 article {
-    background-color: #716d6d; /* Medium gray */
+    background-color: #716d6d; 
     border-radius: 10px;
     padding: 20px;
     margin-top: 20px;
+    position: relative;
 }
 
 h2 {
     font-size: 1.8em;
-    color: #090505; /* Dark gray */
+    color: #090505; 
     margin-bottom: 10px;
 }
 
 h3 {
     font-size: 1.4em;
-    color: #0d0c0c; /* Medium gray */
+    color: #0d0c0c; 
     margin-bottom: 10px;
 }
 
 figcaption {
     font-style: italic;
-    color: #060606; /* Light gray */
+    color: #060606; 
 }
 
-/* Footer styles */
+
 footer {
-    background-color: #333; /* Dark gray */
-    color: #ffd700; /* Gold */
-    padding: 20px;
+    background-color: #333; 
+    color: #ffd700; 
+    padding: 10px;
     text-align: center;
+    position: relative;
+    font-size: small;
 }
 
-/* Navigation and Footer */
 nav {
-    float: left;
-    width: 100%;
+    position: relative;
+    top: 20px;
+    left: 20px;
 }
 
 footer {
-    clear: both;
+    position: fixed;
+    bottom: 20px;
+    left: 20px;
+    width: 100%;
+    
 }
