--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
-
+html{
+    scroll-behavior: smooth;
+}
 body, h1, h2, h3, p {
     margin: 0;
     padding: 0;
@@ -106,4 +108,16 @@ footer {
     left: 20px;
     width: 100%;
     
+}
+#img1 {
+    border-radius: 12px;
+    margin: 12px;
+}
+ul{
+    list-style-type: circle;
+    list-style-position: inside;
+}
+p {
+    border: 3px solid;
+    border-radius: 12px;
 }
